<resources>
    <string name="app_name">CUber Eats</string>
    <string name="facebook_app_id">598392957238848</string>
    <string name="fb_login_protocol_scheme">fb598392957238848</string>

    <string name="map_btn_text">Go to Map</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_detail__inner_">Detail_Inner_Activity</string>
    <string name="action_settings">Settings</string>
    <string name="customer_image">Customer Image</string>
    <string name="customer_name_label">Customer</string>
    <string name="customer_addr_label">Address</string>
    <string name="map_suggest_route">Suggest Route</string>

    <string name="paid">Paid</string>
    <string name="unpaid">Unpaid</string>

    <string name="finish_delivery">Finish Delivery</string>
    <string name="delivery_title">Delivery Details</string>
    <string name="order_payment_title">Your Order</string>
    <string name="make_payment">Make Payment</string>
    <string name="accept_order">Accept Order</string>
    <string name="total_payment">Total: $</string>
</resources>
